--- a/src/components/css/linkLateral.css
+++ b/src/components/css/linkLateral.css
@@ -10,26 +10,14 @@
     text-align: center;
     font-size: 24px;
     z-index: 20;
-    transition:0.5s
-}
-
-.postPrevio:hover .linkPrevio, 
-.postSiguiente:hover .linkSiguiente {
-    color :white;
-    transition: 0.5s;
 }
 
 .postPrevio {
     left: 0px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    transition: 0.5s;
 }
 
 .postSiguiente {
     right: 0px;
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
 }
 
 .linkPrevio,
@@ -45,8 +33,15 @@
 
 .postPrevio:hover,
 .postSiguiente:hover {
-    background-color: #26495c;
-    cursor: default;
-    color: white;
-    transition: 0.5s;
+    border-top:2px dashed yellow ;
+    border-bottom:2px dashed yellow ;
+    
+}
+
+.postSiguiente:hover{
+    border-left:2px dashed yellow ;
+}
+
+.postPrevio:hover{
+    border-right:2px dashed yellow ;
 }
