--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -5,9 +5,8 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
 
-type Props = CollectionEntry<'blog'>['data'];
 
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+const { title, description, updatedDate, heroImage } = Astro.props;
 ---
 
 <html lang="en">
@@ -18,6 +17,10 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				width: calc(100% - 2em);
 				max-width: 100%;
 				margin: 0;
+			}
+
+			hr {
+				color: black;
 			}
 			.hero-image {
 				width: 100%;
@@ -58,12 +61,12 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<Header />
 		<main>
 			<article>
-				<div class="hero-image">
+				<!-- <div class="hero-image">
 					{heroImage && <img width={1020} height={510} src={heroImage} alt="" />}
-				</div>
+				</div> -->
 				<div class="prose">
 					<div class="title">
-						<div class="date">
+						<!-- <div class="date">
 							{
 								updatedDate && (
 									<div class="last-updated-on">
@@ -71,7 +74,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 									</div>
 								)
 							}
-						</div>
+						</div> -->
 						<h1>{title}</h1>
 						<hr />
 					</div>
