--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -12,12 +12,16 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 		<style>
 			ul li {
-				height: 250px;
-				transition:0.3s
+				transition:0.3s;
 			}
 			li a h4{
-				margin-bottom:0px
+				margin-bottom:0px;
+                height:15%
 			}
+
+            li a h4:nth-child(3n){
+                background-color: #5AE4A7;
+            }
 
 			ul li:hover{
 				transform:translateY(-6px)
@@ -28,9 +32,15 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 				flex-direction: column;
 			} */
 
-			li img{
-				height: 70%;
+			li a img{
+				height: 85%;
+                width : 100%;
+                object-fit:contain
 			}
+
+            .full-width{
+                object-fit: cover !important;
+            }
 
 
 
@@ -40,77 +50,78 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 		<Header />
 		<main>
 			<section>
+                <p class="mt-8 mb-6 w-3/5">Cada artículo está diseñado para ser claro, práctico y accesible, ya sea que estés comenzando tu viaje en el código o buscando profundizar en temas específicos. Aquí comparto todo lo que he aprendido a lo largo de mi experiencia autodidacta, con el objetivo de ayudarte a superar desafíos y a construir tus propias soluciones tecnológicas. ¡Explora, aprende y sigue creciendo con cada contenido!</p>
 				<ul class="grid grid-cols-12 gap-6">
 					<li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/aws-architect`}>
-                            <img class="foto" src="/aws-architect.png" alt="" />
-                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200">AWS Architect</h4>
+                            <img class="foto" src="/aws-architect.jpg" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-green-300">AWS Architect</h4>
                         </a>
                     </li>
 
 					<li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/web`}>
-                            <img class="foto" src="/aws-architect.png" alt="" />
-                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Web</h4>
+                            <img class="foto" src="/web.png" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-yellow-300" class="title">Web</h4>
                         </a>
                     </li>
 					<li class="col-span-3  border border-2 border-black">
                         <a href={`/blog/programacion-c`}>
                             <img class="foto" src="/aws-architect.png" alt="" />
-                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Programación en C</h4>
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-300" class="title">Programación en C</h4>
                         </a>
                     </li>
 					<li class="col-span-3  border border-2 border-black">
                         <a href={`/blog/javascript`}>
-                            <img class="foto" src="/aws-architect.png" alt="" />
-                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Javascript</h4>
+                            <img class="foto" src="/cloud.jpg" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-green-300" class="title">Javascript</h4>
                         </a>
                     </li>
 					<li class="col-span-3  border border-2 border-black">
                         <a href={`/blog/desarrollo-web`}>
-                            <img class="foto" src="/aws-architect.png" alt="" />
-                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Desarrollo web</h4>
-            
+                            <img class="foto" src="/web.jpg" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-yellow-300" class="title">Desarrollo web</h4>
+
                         </a>
                     </li>
 					
                     <li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/aws-developer`}>
-                            <img class="foto" src="/blog-placeholder-3.jpg" alt="" />
-                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">AWS Developer</h4>
+                            <img class="foto" src="/aws-developer.jpg" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-300" class="title">AWS Developer</h4>
             
                         </a>
                     </li>
 
 					<li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/react`}>
-                            <img class="foto" src="/blog-placeholder-3.jpg" alt="" />
-                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">React</h4>
+                            <img class="foto full-width" src="/react.jpg" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-green-300" class="title">React</h4>
             
                         </a>
                     </li>
                     <li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/linux`}>
                             <img class="foto" src="/blog-placeholder-3.jpg" alt="" />
-                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Linux</h4>
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-yellow-300" class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Linux</h4>
                         </a>
                     </li>
 					<li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/hardware`}>
                             <img class="foto" src="/blog-placeholder-3.jpg" alt="" />
-                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Computación general</h4>
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-300" class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Hardware</h4>
                         </a>
                     </li>
 					<li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/sistemas-operativos`}>
-                            <img class="foto" src="/blog-placeholder-3.jpg" alt="" />
-                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200" class="title">Sistemas operativos</h4>
+                            <img class="foto" src="/os.jpg" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-green-300" class="title">S. Operativos</h4>
                         </a>
                     </li>
 					<li class="col-span-3 border border-2 border-black">
                         <a href={`/blog/algoritmos`}>
-                            <img class="foto" src="/blog-placeholder-3.jpg" alt="" />
-                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-purple-200"class="title">Algoritmos</h4>
+                            <img class="foto" src="/algoritmo.jpg" alt="" />
+                            <h4 class="title border-t-2 border-black p-2 mb-0 bg-yellow-300"class="title">Algoritmos</h4>
                         </a>
                     </li>
 
