--- a/src/pages/blog/web/index.astro
+++ b/src/pages/blog/web/index.astro
@@ -24,92 +24,34 @@ const posts = (await getCollection(tema)).sort(
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 		<style>
-.foto {
-  border-width: 4px;
-  border-style: solid;
-  border-image: linear-gradient(to right, darkblue, darkorchid) 1;
-  object-fit: cover;
-}
+			.leccion:nth-child(3n + 1):hover{
+				background-color: rgb(233 213 255);
+			}
+			.leccion:nth-child(3n + 2):hover{
+				background-color: rgb(254 240 138);
+			}
+			.leccion:nth-child(3n):hover{
+				background-color: rgb(134 239 172);
+			}
+
+			li a h4{
+				margin:0
+			}
 			
-			main {
-				width: 960px;
-			}
-			ul {
-				display: flex;
-				flex-wrap: wrap;
-				gap: 2rem;
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
-			}
-			ul li {
-				width: calc(50% - 1rem);
-			}
-			ul li * {
-				text-decoration: none;
-				transition: 0.2s ease;
-			}
-			ul li:first-child {
-				width: 100%;
-				margin-bottom: 1rem;
-				text-align: center;
-			}
-			ul li:first-child img {
-				width: 100%;
-			}
-			ul li:first-child .title {
-				font-size: 2.369rem;
-			}
-			ul li img {
-				margin-bottom: 0.5rem;
-			}
-			ul li a {
-				display: block;
-			}
-			.title {
-				margin: 0;
-				color: rgb(var(--black));
-				line-height: 1;
-			}
-			.date {
-				margin: 0;
-				color: rgb(var(--gray));
-			}
-			ul li a:hover h4,
-			ul li a:hover .date {
-				color: rgb(var(--accent));
-			}
-			ul a:hover img {
-				box-shadow: var(--box-shadow);
-			}
-			@media (max-width: 720px) {
-				ul {
-					gap: 0.5em;
-				}
-				ul li {
-					width: 100%;
-					text-align: center;
-				}
-				ul li:first-child {
-					margin-bottom: 0;
-				}
-				ul li:first-child .title {
-					font-size: 1.563em;
-				}
-			}
+	
 		</style>
 	</head>
 	<body>
 		<Header />
 		<main>
-			<section>
-				<ul>
+			<section class="w-5/6 m-auto ">
+				<ul class="grid grid-cols-4 gap-4">
 					{
 						posts.map((post) => (
-							<li>
+							<li class="leccion p-2 border-b-2 border-black col-span-2">
 								<a href={`/blog/web/${post.slug}/`}>
-									<img class="foto" width={720} height={260} src={post.data.heroImage} alt="" />
 									<h4 class="title">{post.data.title}</h4>
+									{/* <p>{post.data.description}</p> */}
 								</a>
 							</li>
 						))
